--- a/src/NavigationController/NavigationView.form
+++ b/src/NavigationController/NavigationView.form
@@ -60,6 +60,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="intakeButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="99" red="99" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Intake"/>
       </Properties>
       <Events>
@@ -68,6 +71,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="moodButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="99" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Mood"/>
       </Properties>
       <Events>
@@ -76,6 +82,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="profileButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Profile"/>
       </Properties>
       <Events>
@@ -84,6 +93,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="notificationButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Notifications"/>
       </Properties>
       <Events>
@@ -92,6 +104,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="statisticButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Statistics"/>
       </Properties>
       <Events>
@@ -100,6 +115,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="foodRecButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Food Recommendations"/>
       </Properties>
       <Events>
